--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,10 @@
 [package]
 name = "argos-arpa-item-macro"
+description = "Derive macro crate for `argos-arpa`"
+license = "MIT"
+repository = "https://github.com/SGullin/arpa-item-macro"
+keywords = ["arpa", "derive"]
+categories = ["science"]
 version = "0.1.0"
 edition = "2021"
 
